# mycv

./: .gitignore  Sepehr_Laal_CV.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
