[project]
name = "mycv"
version = "1.0.0"
description = "My CV"
authors = [
    {name = "Sepehr Laal"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "rendercv[full]==2.6",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "pydantic-settings",
    "tinydb",
    "litellm",
    "markitdown",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.rendercv]
# RenderCV configuration can be added here
